css/base.css
/* This comes from inline css in default.html */

body {
    margin: 10px;
    background-color: #8080C0;
}

.page {
    margin-left: auto;
    margin-right: auto;
    min-height: 800px;
    height: auto;
/*    height: auto !important;
    height: 800px;*/
    width: 960px;
    background-image: url(/images/header-bg.png);
    background-repeat: no-repeat;
    background-color: #D3D3D3;

    -moz-border-radius: 20px;
    -webkit-border-radius: 20px;
    border-radius: 20px;
    box-shadow: 8px 10px 10px rgba(0,0,0,0.5),
   inset 4px 10px 10px rgba(255,255,255,0.85);
    -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    zoom: 1;
    overflow: hidden; /* I don't know why this works! */
    behavior: url(/js/PIE.htc);
}

.page-header {
    /*background-color: #444444;*/
    width: 100%;
    height: 120px;
    padding-top: 10px;
    behavior: url(/js/PIE.htc);
}

img {
    -pie-png-fix: true;
}

.page-footer {
    float: left;
    clear: both;
    margin-bottom: 10px;
    margin-left: 20px;
    font-size: x-small;
    font-family: Arial;
}

.soft-corners {
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

/* fix for the twitter widget */
.twtr-doc {
    -moz-border-radius: 10px !important;
    -webkit-border-radius: 10px !important;
    border-radius: 10px !important;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    behavior: url(/js/PIE.htc); 
}

.disqus {
    zoom: 1; /* IE trick */
}

#disqus_thread {
	overflow: auto;
}

.page-header img {
    border: 0;
    margin-left: 152px;
    /* margin-right: auto; */
}

#page-content {
    margin-top: 10px;
    border: 1px solid #AAAAAA;
    float: left;
    width: 596px;
    min-height: 600px;
    height: auto !important;
    height: 600px;
    background-color: white;
    padding: 5px;
    padding-bottom: 20px;
    margin-bottom: 10px;
    -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
    font-size: small; /* Arial only seems to ever look ok in small or bold form */
    behavior: url(/js/PIE.htc);
}

#page-content h1,h2,h3,h4,h5 {
    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
    text-shadow: 1px 2px 3px #888;
}

#blog-widget {

}

#blog-widget .post-title {
    width: 200px;
    padding-left: 20px;
}


/* blog_article.html */

.article_title {
    font-weight: bold;
    font-size: xx-large;
    color: #D2B48C;
}
.postX {
    padding-top: 20px;
    max-width:500px;
    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
    margin-left: 30px;
}
.postY {
    min-height: 200px;
    font-size: small;
    font-family: 'Trebuchet MS', Helvetica, sans-serif;
    /*font-family: Verdana, Geneva, sans-serif;*/
}
.article_author {
    font-size: small;
}
.article_date {
    font-size: x-small;
}
.article_categories {
    font-size: x-small;
}

a.ni {
    color: red;
}                     

a.ni:hover {
    color: red;
}

a.ni:visited {
    color: red;
}  

.sidebar {
    position: absolute;
    height: 100%;
}

/* define the left sidebar */
#sidebar-left {
    float: left;
    width: 120px;
    min-height: 400px;
    overflow: hidden;
}

#sidebar-left .module {
    /* copied from menu */
    float: left;
    clear: left;
    font-family: arial;
    font-size: 8pt;
    width: 100px;
    min-height: 50px;
    border: 1px solid #AAAAAA;
    background-color: #EEEEEE;
    margin-left: 8px;
    padding: 0px;
    padding-top: 10px;
    padding-bottom: 5px;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
    behavior: url(/js/PIE.htc);
}

#menu {
    font-weight: bold;
    list-style-type: none;
    height: 120px;
    -pie-background: linear-gradient(#EEFF99, #66EE33);
}

ul.menu {
    font-family: arial;
    font-size: 8pt;
    font-weight: bold;
    list-style-type: none;
    width: 48px;
    padding: 4px;
    margin-left: 8px;
    margin-right: 8px;
    margin-top: 10px;
    width: 100px;
    float: left;
    border: 1px solid #AAAAAA;
    background-color: #EEEEEE;
    height: 120px;
    padding-top: 10px;
    padding-bottom: 5px;
    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
}

#menu li {
    margin-left: 0px;
    padding-left: 5px;
    margin: 0px;
}
    
#menu a {
    text-decoration: none;
    display: block;
    padding: 2px;
}

#menu a:visited {
    color: blue;
}

#menu a:hover {
    background-color: #E0FFFF;
}

#theme-select {
    font-weight: bold;
    padding-left: 4px !important;
}

#sidebar-right {

}

#sidebar-right module {

}

